// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

// Common protobuf definitions.

// To include this file in a protobuf service, be sure to add EXTRA_PROTO_PATHS
// ${CMAKE_CURRENT_SOURCE_DIR}/../ to the KRPC_GENERATE() call, and include this file as:
//
//   import "rpc/common.proto";
//
// This ensures that the namespacing of the generated common files and the service files
// that consume them match up.
package impala;

// Common wrapper struct for Thrift data structures serialized to Protobuf.
message ThriftWrapperPb {
  // Index of the sidecar which contains the Thrift-serialized payload. Almost always 0.
  required int32 sidecar_idx = 1;
}
